2011-06-24  Tristan Gingold  <gingold@adacore.com>

PR gas/11625
	* config/obj-evax.c (evax_frob_symbol): Use as_bad instead of abort.